--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>OOP with JavaScript</title>
 </head>
 <body>
 
 
     <script src="app.js"></script>
+    <script src="educative.js"></script>
     
 </body>
 </html>
