Course description is added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>OOP with JavaScript</title>
 </head>
 <body>
+    <h1>
+        Educative.io
+    </h1>
 
+    <p>Learn Object Oriented Programming in JavaScript</p>
+    <span>Course link: <a href="https://www.educative.io/courses/learn-object-oriented-programming-in-javascript">educative.io</a></span>
 
     <script src="app.js"></script>
     <script src="educative.js"></script>
